# open_manipulator

./: README.md
open_manipulator_description/launch/: open_manipulator_rviz.launch
open_manipulator_ikfast_plugin/: CMakeLists.txt  README.md  open_manipulator_moveit_ikfast_plugin_description.xml  package.xml
open_manipulator_ikfast_plugin/src/: open_manipulator_ikfast_moveit_plugin.cpp  open_manipulator_ikfast_solver.cpp
open_manipulator_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
open_manipulator_moveit_config/config/: fake_controllers.yaml  ompl_planning.yaml  open_manipulator.srdf  open_manipulator_simulated_config.yaml  ros_controllers.yaml
open_manipulator_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  joystick_control2.launch  move_group.launch  moveit.rviz  moveit_servo.launch  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  setup_assistant.launch  spacenav_cpp.launch
open_manipulator_teleop/: CMakeLists.txt  package.xml
open_manipulator_teleop/launch/: gamepad_to_twist.launch
open_manipulator_teleop/src/: gamepad_to_twist.cpp
