<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_teleop</name>
  <version>0.0.0</version>
  <description>The open_manipulator_teleop package</description>

  <maintainer email="jeremie@todo.todo">jeremie</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
